--- a/style.css
+++ b/style.css
@@ -3,7 +3,24 @@ section{
 }
 .half-width{
   width:50%;
+  padding:2%;
+
 }
 .half-width img{
   width:80%;
+}
+span{
+  color:orange;
+}
+body{
+  font-family: 'Poppins', sans-serif;
+}
+h1{
+  font-size:50px;
+}
+.link-button{
+  text-decoration:none;
+  background-image:linear-gradient(orange,red);
+  padding:10px 40px;
+  border-radius:15px;
 }
