--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ span{
 }
 body{
   font-family: 'Poppins', sans-serif;
+  margin:0px;
 }
 h1{
   font-size:50px;
@@ -23,4 +24,8 @@ h1{
   background-image:linear-gradient(orange,red);
   padding:10px 40px;
   border-radius:15px;
+}
+.top-banner{
+  background-image:url(images/top-banner.png);
+  background-repeat:no-repeat
 }
