--- a/style.css
+++ b/style.css
@@ -29,3 +29,17 @@ h1{
   background-image:url(images/top-banner.png);
   background-repeat:no-repeat
 }
+
+.dream-big{
+  background-image:url(images/dream-bg.png);
+  background-repeat:no-repeat;
+  background-position:right;
+  padding-right:3%;
+}
+.button-link1{
+  text-decoration:none;
+  background-image:linear-gradient(red,orange);
+  padding:10px 40px;
+  border-radius:10px;
+
+}
